# opencl-erosion

./: .gitignore  CMakeLists.txt  opencl-erosion.kdev4  src.kdev4
.kdev4/: _custom.kdev4  opencl-erosion.kdev4  src.kdev4
applications/: CMakeLists.txt
applications/erosion/: CMakeLists.txt
applications/starter/: CMakeLists.txt
applications/starter/source/: Module_registry.cpp  Starter.cpp
cmake/modules/: FindOpenCL.cmake  build_functions.cmake  cache.cmake  compiler.cmake  installation.cmake  logging.cmake  third_party.cmake  versioning.cmake
cmake/templates/: version_gen.cpp.in  version_gen.hpp.in  version_gen_fwd.hpp.in
fonts/: CMakeLists.txt
libs/: CMakeLists.txt
libs/cl/: CMakeLists.txt
libs/cl/include/: CL_exception.h  CL_manager.h
libs/cl/source/: CL_manager.cpp
libs/common/: CMakeLists.txt
libs/common/include/: Enum_generator.h  Exception.h  LogLevel.h  LogUtilFunc.h  Log_level.h  Log_util_func.h  Logger.h  Macros.h  Mkay_exception.h  Module.h  Singleton.h  Time_measurement.h  Tools.h  glm_definitions.h
libs/common/source/: Log_util_func.cpp  Logger.cpp  Time_measurement.cpp
libs/database/: CMakeLists.txt
libs/database/include/: Database.h
libs/database/source/: Database.cpp
libs/gfx/: CMakeLists.txt
libs/gfx/include/: Abstract_geometric_object.h  Abstract_material.h  Abstract_texture.h  Box.h  Camera.h  Colored_material.h  Cube.h  Dimension.h  Material_factory.h  OpenGL_Headers.h  Point_light.h  Ressource_exception.h  Ressource_manager.h  SDL_event_manager.h  SDL_font_manager.h  SDL_window_manager.h  Shader_exception.h  Shader_program.h  Skybox.h  Texture.h  Texture_cube_map.h
libs/gfx/source/: Abstract_geometric_object.cpp  Abstract_material.cpp  Abstract_texture.cpp  Box.cpp  Camera.cpp  Colored_material.cpp  Cube.cpp  Material_factory.cpp  Point_light.cpp  Ressource_manager.cpp  SDL_event_manager.cpp  SDL_font_manager.cpp  SDL_window_manager.cpp  Shader_program.cpp  Skybox.cpp  Texture.cpp  Texture_cube_map.cpp
libs/input/: CMakeLists.txt
libs/input/include/: SDL_input_manager.h
libs/input/source/: SDL_input_manager.cpp
libs/module/: CMakeLists.txt
libs/module/include/: Configuration_exception.h  Module.h  Object_factory.h
libs/module/source/: Module.cpp
libs/platform/: CMakeLists.txt
libs/platform/include/: Platform.h  Signal_handler.h
libs/platform/source/: Signal_handler.cpp
libs/sdl/: CMakeLists.txt
libs/tool/: CMakeLists.txt
libs/tool/include/: SDL_exception.h  SDL_window_manager.h
libs/tool/source/: CL_manager.cpp  SDL_window_manager.cpp
modules/: CMakeLists.txt
modules/erosion/: CMakeLists.txt
modules/erosion/include/: Module_erosion.h
modules/erosion/source/: Erosion.cpp  Erosion.h  Module_erosion.cpp
shaders/: CMakeLists.txt
shaders/color_shader/: CMakeLists.txt
shaders/color_shader/include/: vars.hgl
shaders/common_shader/: CMakeLists.txt
shaders/skybox/: CMakeLists.txt
shaders/skybox_shader/: CMakeLists.txt
shaders/standard/: CMakeLists.txt
textures/: CMakeLists.txt
(+16 files in other folders)
